# practice-book-classic-problems-in-python

./: README.md
python/: README.md  pyproject.toml
python/ch01/calculating_pi/: README.md  pyproject.toml
python/ch01/calculating_pi/calculating_pi/: calculating_pi.py  main.py
python/ch01/fibonacci/: README.md  pyproject.toml
python/ch01/fibonacci/fibonacci/: __init__.py  fibonacci_1.py  fibonacci_2.py  fibonacci_3.py  fibonacci_4.py  fibonacci_5.py  fibonacci_6.py  main.py
python/ch01/trivial-compression/: README.md  pyproject.toml
python/ch01/trivial-compression/trivial_compression/: compressed_gene.py  main.py  o.txt  trivial_compression.py
python/ch01/unbreakable_encryption/: README.md  pyproject.toml
python/ch01/unbreakable_encryption/unbreakable_encryption/: __init__.py  main.py  unbreakable_encryption.py
rust/ch01/calculate_pi/: Cargo.toml
rust/ch01/calculate_pi/src/: calculating_pi.rs  main.rs
rust/ch01/fibonacci/: Cargo.toml  README.md
rust/ch01/fibonacci/src/: fibonacci_1.rs  fibonacci_2.rs  fibonacci_3.rs  fibonacci_4.rs  fibonacci_5.rs  main.rs
rust/ch01/trivial-compression/: Cargo.toml  README.md
rust/ch01/trivial-compression/src/: compressed_gene.rs  main.rs
rust/ch01/trivial-compression/tests/: compressed_gene_test.rs
rust/ch01/trivial-compression/tests/expected/: compress_gene_0.txt  compress_gene_2nu.txt  compress_gene_3nu.txt  compress_gene_4nu.txt  compress_gene_6nu.txt  compress_gene_a1.txt  compress_gene_a2.txt  compress_gene_a3.txt  compress_gene_a4.txt  compress_gene_a5.txt  compress_gene_a6.txt  compress_gene_book.txt  compress_gene_t1.txt  compress_gene_t4.txt
rust/ch01/trivial-compression/tests/input/: input_gene_book.txt
rust/ch01/unbreakable_encryption/: Cargo.toml  README.md
rust/ch01/unbreakable_encryption/src/: encryption.rs  main.rs
