[tool.poetry]
name = "unbreakable-encryption"
version = "0.1.0"
description = ""
authors = ["Eder Andrés Ávila Niño <email@email.com>"]
readme = "README.md"
packages = [{include = "unbreakable_encryption"}]

[tool.poetry.scripts]
main = "unbreakable_encryption.main:main"

[tool.poetry.dependencies]
python = "^3.11"
setuptools = "*"

[tool.poetry.dev-dependencies]
yapf = "^0.32"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
