[package]
name = "unbreakable_encryption"
version = "0.1.0"
rust-version = "1.65"
edition = "2021"
description = "Simple utility for encryption of data"
authors = ["Eder Andrés Ávila Niño <email@email.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4.0", features = ["cargo"] }
rand = "0.8.*"

[dev-dependencies]
assert_cmd = "~2.0"
predicates = "~2.1"
